--- a/.htaccess
+++ b/.htaccess
@@ -13,6 +13,11 @@
     RewriteCond %{HTTP:x-xsrf-token} .
     RewriteRule .* - [E=HTTP_X_XSRF_TOKEN:%{HTTP:X-XSRF-Token}]
 
+    # Allow direct access to build assets (Vite compiled assets)
+    RewriteCond %{REQUEST_URI} ^/build/(.*)$
+    RewriteCond %{DOCUMENT_ROOT}/public/build/$1 -f
+    RewriteRule ^build/(.*)$ public/build/$1 [L]
+
     # Check if requested file exists in public directory and serve it directly
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
